@@ -1,7 +1,16 @@
+2002-09-13  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* Makefile.in: never remove doc/oprofile.html.
+	* acinclude.m4: small work-around for sed-related problem
+
+2002-09-12  Will Cohen  <wcohen@redhat.com>
+
+	* Makefile.in: Separate kernel and user code build rules.
+
 2002-09-12  Will Cohen  <wcohen@redhat.com>
  
-        * libutil++/child_reader.h (child_reader): Add missing "std::".
-        * libutil++/child_reader.cpp (error_str): Ditto.
+	* libutil++/child_reader.h (child_reader): Add missing "std::".
+	* libutil++/child_reader.cpp (error_str): Ditto.
  
 2002-09-12  John Levon  <levon@movementarian.org>
 
